# morning-digest

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
scripts/: e2e_local.py
src/digest/: app.py  auth.py  config.py  database.py  models.py  worker.py
src/digest/ingestion/: email.py  reddit.py  rss.py
src/digest/migrations/: env.py
src/digest/migrations/versions/: 26ffec7ad5db_initial_tables.py  c3fc8f048e8b_add_digest_pipeline_tables.py  d4a1b2c3e4f5_add_refresh_tokens.py
src/digest/routes/: admin.py  auth.py  digests.py  inbound.py  sources.py  users.py
src/digest/services/: article_store.py  auth_service.py  digest_store.py  email_sender.py  llm.py  source_store.py
src/digest/services/pipeline/: collect.py  dedup.py  group.py  orchestrator.py  rank.py
src/digest/tasks/: generate_digest.py  ingest.py
tests/: conftest.py  test_admin_routes.py  test_article_store.py  test_auth.py  test_auth_routes.py  test_digest_models.py  test_digest_routes.py  test_email_ingestion.py  test_email_sender.py  test_generate_digest_task.py  test_inbound_webhook.py  test_ingest_task.py  test_integration.py  test_llm_service.py  test_models.py  test_pipeline_collect.py  test_pipeline_dedup.py  test_pipeline_group.py  test_pipeline_integration.py  test_pipeline_orchestrator.py  test_pipeline_rank.py  test_reddit_ingestion.py  test_rss_ingestion.py  test_source_routes.py  test_user_routes.py
